--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "19.0.1"
 
     defaultConfig {
-        packageName "com.ubicoo.shutdown"
+        packageName "net.databinder.proximidie"
         minSdkVersion 8
         targetSdkVersion 19
     }
