--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-	package="com.ubicoo.shutdown" android:versionName="##DEV#SNAPSHOT##">
+	package="net.databinder.proximidie" android:versionName="##DEV#SNAPSHOT##">
 	<uses-sdk android:minSdkVersion="8" android:targetSdkVersion="8"></uses-sdk>
 	<application android:icon="@drawable/icon" android:label="@string/app_name">
 		<activity android:name=".Shutdown" android:label="@string/app_name"
