--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 	package="net.databinder.proximidie" android:versionName="##DEV#SNAPSHOT##">
-	<uses-sdk android:minSdkVersion="8" android:targetSdkVersion="8"></uses-sdk>
+	<uses-sdk android:minSdkVersion="10" android:targetSdkVersion="19"></uses-sdk>
 	<application android:icon="@drawable/icon" android:label="@string/app_name">
 		<activity android:name=".Shutdown" android:label="@string/app_name"
 			android:theme="@android:style/Theme.NoDisplay" android:launchMode="singleInstance"
@@ -11,5 +11,11 @@
 				<category android:name="android.intent.category.LAUNCHER" />
 			</intent-filter>
 		</activity>
-	</application>
+        <receiver android:name=".DisconnectedReceiver" android:enabled="true" android:exported="true">
+            <intent-filter>
+                <action android:name="android.bluetooth.device.action.ACL_DISCONNECTED"/>
+            </intent-filter>
+        </receiver>
+    </application>
+    <uses-permission android:name="android.permission.BLUETOOTH" />
 </manifest>
