--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,21 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-	package="net.databinder.proximidie" android:versionName="##DEV#SNAPSHOT##">
-	<uses-sdk android:minSdkVersion="10" android:targetSdkVersion="19"></uses-sdk>
-	<application android:icon="@drawable/icon" android:label="@string/app_name">
-		<activity android:name=".Shutdown" android:label="@string/app_name"
-			android:theme="@android:style/Theme.NoDisplay" android:launchMode="singleInstance"
-			android:excludeFromRecents="true" android:finishOnTaskLaunch="true">
-			<intent-filter>
-				<action android:name="android.intent.action.MAIN" />
-				<category android:name="android.intent.category.LAUNCHER" />
-			</intent-filter>
-		</activity>
-        <receiver android:name=".DisconnectedReceiver">
+    package="net.databinder.proximidie"
+    android:versionName="##DEV#SNAPSHOT##" >
+
+    <uses-sdk
+        android:minSdkVersion="11"
+        android:targetSdkVersion="19" />
+
+    <application
+        android:icon="@drawable/icon"
+        android:label="@string/app_name" >
+        <receiver android:name=".DisconnectedReceiver" >
             <intent-filter>
-                <action android:name="android.bluetooth.device.action.ACL_DISCONNECTED"/>
+                <action android:name="android.bluetooth.device.action.ACL_DISCONNECTED" />
             </intent-filter>
         </receiver>
+
+        <activity
+            android:name=".Settings"
+            android:label="@string/title_activity_settings"
+            android:theme="@style/Theme.AppCompat">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
+
     <uses-permission android:name="android.permission.BLUETOOTH" />
+
 </manifest>
